# Vacancy_Parser

./: README.md  pyproject.toml
src/: main.py  vacancy.py  vacancy_storage.py
